feat: add apis and types for audio video screen meeting refs: CHATS-487 CHATS-488 CHATS-489
