# src/types/network/apis/IMeetingsApi.ts
@@ -6,11 +6,17 @@
 
 import { JoinSettings } from '../models/meetingBeTypes';
 import {
+	CloseAudioStreamResponse,
+	CloseScreenShareStreamResponse,
+	CloseVideoStreamResponse,
 	DeleteMeetingResponse,
 	GetMeetingResponse,
 	JoinMeetingResponse,
 	LeaveMeetingResponse,
-	ListMeetingsResponse
+	ListMeetingsResponse,
+	OpenAudioStreamResponse,
+	OpenScreenShareStreamResponse,
+	OpenVideoStreamResponse
 } from '../responses/meetingsResponses';
 
 interface IMeetingsApi {
@@ -21,6 +27,15 @@ interface IMeetingsApi {
 	joinMeetingByMeetingId(meetingId: string, settings: JoinSettings): Promise<JoinMeetingResponse>;
 	leaveMeeting(meetingId: string): Promise<LeaveMeetingResponse>;
 	deleteMeeting(meetingId: string): Promise<DeleteMeetingResponse>;
+	openVideoStream(meetingId: string): Promise<OpenVideoStreamResponse>;
+	closeVideoStream(meetingId: string, sessionId: string): Promise<CloseVideoStreamResponse>;
+	openAudioStream(meetingId: string): Promise<OpenAudioStreamResponse>;
+	closeAudioStream(meetingId: string, sessionId: string): Promise<CloseAudioStreamResponse>;
+	openScreenShareStream(meetingId: string): Promise<OpenScreenShareStreamResponse>;
+	closeScreenShareStream(
+		meetingId: string,
+		sessionId: string
+	): Promise<CloseScreenShareStreamResponse>;
 }
 
 export default IMeetingsApi;
